<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_light"
    tools:context=".CartFragment">

    <!-- Cart Items RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkoutSummaryLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        android:clipToPadding="false"
        tools:listitem="@layout/item_cart_product"
        />

    <!-- Checkout Summary -->
    <LinearLayout
        android:id="@+id/checkoutSummaryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Total Items -->
        <TextView
            android:id="@+id/totalItemsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_items"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Total Price -->
        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_price"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Checkout Button -->
        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:elevation="4dp"
            android:text="@string/checkout"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
